<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">A day in the life of …</string>
    <string name="HEROKU_DOMAIN" translatable="false">http://192.168.1.101:8888/</string>
    <string name="URL_GET_INVESTIGADORES" translatable="false">%sinvestigadores/pagina/%d/id_admin/%d</string>
    <string name="URL_POST_INVESTIGADORES" translatable="false">%sinvestigadores</string>
    <string name="URL_PATCH_INVESTIGADORES_ACTIVAR" translatable="false">%sinvestigadores/%d/activar</string>
    <string name="URL_LOGIN_INVESTIGADORES" translatable="false">%sinvestigadores/login</string>
    <string name="URL_GET_RECUPERAR_INVESTIGADOR" translatable="false">%sinvestigadores/recuperar/%s/idioma/%s</string>
    <string name="URL_PUT_RESETEAR_PASSWORD" translatable="false">%sinvestigadores/resetear</string>
    <string name="URL_PUT_INVESTIGADORES" translatable="false">%sinvestigadores/%d</string>
    <string name="URL_POST_ENTREVISTADOS" translatable="false">%sentrevistados</string>
    <string name="URL_GET_ENTREVISTADOS_TOTALES" translatable="false">%sentrevistados/pagina/%d</string>
    <string name="URL_GET_ENTREVISTADOS_INVESTIGADOR" translatable="false">%sentrevistados/pagina/%d/investigador/%d</string>
    <string name="URL_GET_ENTREVISTADO" translatable="false">%sentrevistados/%d</string>
    <string name="URL_PUT_ENTREVISTADOS" translatable="false">%sentrevistados/%d</string>
    <string name="URL_GET_ACCIONES_IDIOMA" translatable="false">%sacciones/idioma/%s</string>
    <string name="URL_GET_ACCIONES" translatable="false">%sacciones</string>
    <string name="URL_POST_ACCIONES" translatable="false">%sacciones</string>
    <string name="URL_PUT_ACCIONES" translatable="false">%sacciones/%d</string>
    <string name="URL_DELETE_ACCIONES" translatable="false">%sacciones/%d</string>
    <string name="URL_GET_CIUDADES" translatable="false">%sciudades</string>
    <string name="URL_GET_EMOTICONES" translatable="false">%semoticones/idioma/%s</string>
    <string name="URL_GET_ESTADOS_CIVILES" translatable="false">%sestadosCiviles/idioma/%s</string>
    <string name="URL_GET_NIVELES_EDUCACIONALES" translatable="false">%snivelesEducacionales/idioma/%s</string>
    <string name="URL_GET_PROFESIONES" translatable="false">%sprofesiones</string>
    <string name="URL_GET_TIPOS_CONVIVENCIAS" translatable="false">%stiposConvivencias/idioma/%s</string>
    <string name="URL_GET_TIPOS_ENTREVISTAS" translatable="false">%stiposEntrevistas/idioma/%s</string>
    <string name="URL_GET_ENTREVISTAS" translatable="false">%sentrevistados/%d/entrevistas/idioma/%s</string>
    <string name="URL_POST_ENTREVISTAS" translatable="false">%sentrevistados/%d/entrevistas</string>
    <string name="URL_GET_ENTREVISTA_ESPECIFICA" translatable="false">%sentrevistados/%d/entrevistas/%d</string>
    <string name="URL_PUT_ENTREVISTA_ESPECIFICA" translatable="false">%sentrevistados/%d/entrevistas/%d</string>
    <string name="URL_DELETE_ENTREVISTA_ESPECIFICA" translatable="false">%sentrevistados/%d/entrevistas/%d</string>
    <string name="URL_GET_EVENTO" translatable="false">%sentrevistas/%d/eventos/idioma/%s</string>
    <string name="URL_POST_EVENTO" translatable="false">%sentrevistas/%d/eventos</string>
    <string name="URL_GET_EVENTO_ESPECIFICO" translatable="false">%sentrevistas/%d/eventos/%d</string>
    <string name="URL_PUT_EVENTO" translatable="false">%sentrevistas/%d/eventos/%d</string>
    <string name="URL_DELETE_EVENTO" translatable="false">%sentrevistas/%d/eventos/%d</string>
    <string name="URL_DELETE_ENTREVISTADO" translatable="false">%sentrevistados/%d</string>
    <string name="URL_GET_ESTADISTICAS" translatable="false">%sestadisticas</string>
    <string name="INGLES" translatable="false">en</string>
    <string name="ESPANOL" translatable="false">es</string>
    <string name="SEXO_MASCULINO">Male</string>
    <string name="SEXO_FEMENINO">Female</string>
    <string name="SEXO_OTRO">Other</string>
    <string name="SEXO_MASCULINO_MASTER_KEY" translatable="false">Masculino</string>
    <string name="SEXO_FEMENINO_MASTER_KEY" translatable="false">Femenino</string>
    <string name="SEXO_OTRO_MASTER_KEY" translatable="false">Otro</string>
    <string name="ROL_INVESTIGADOR">Researcher</string>
    <string name="ROL_ADMINITRADOR">Administrator</string>
    <string name="ROL_INVESTIG_KEY_MASTER" translatable="false">Investigador</string>
    <string name="ROL_ADMIN_KEY_MASTER" translatable="false">Administrador</string>
    <string name="TEMA_NOTIFICACION_REGISTRO" translatable="false">RegistroInvestigador</string>
    <string name="CANAL_NOMBRE">Activations alert</string>
    <string name="CANAL_DESCRIPCION">Registration alerts for new researchers</string>
    <string name="TITULO_TOOLBAR_PERFIL">Profile</string>
    <string name="TITULO_TOOLBAR_REGISTRO">Register</string>
    <string name="TITULO_TOOLBAR_NUEVO_ENTREVISTADO">New Interviewee</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTADO">Edit Interviewee</string>
    <string name="TITULO_TOOLBAR_NUEVA_ENTREVISTA">New Interview</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTA">Edit Interview</string>
    <string name="TITULO_TOOLBAR_CREAR_EVENTO">New event</string>
    <string name="TITULO_TOOLBAR_EVENTOS">Events</string>
    <string name="TITULO_TOOLBAR_LISTA_ENTREVISTAS">Interviews List</string>
    <string name="TITULO_TOOLBAR_EDITAR_PERFIL">Edit Profile</string>
    <string name="TITULO_TOOLBAR_CONTACTO">Contact us</string>
    <string name="TITULO_TOOLBAR_EDITAR_EVENTO">Edit Event</string>
    <string name="TITULO_TOOLBAR_LISTADO_INVESTIGADORES">Researchers list</string>
    <string name="TITULO_TOOLBAR_LISTADO_ACCIONES">Actions List</string>
    <string name="TITULO_TOOLBAR_NUEVA_ACCION">New Action</string>
    <string name="TITULO_TOOLBAR_EDITAR_ACCION">Edit Action</string>
    <string name="TITULO_TABLEAU" translatable="false">Tableau</string>
    <string name="SHARED_PREF_MASTER_KEY" translatable="false">udelvd</string>
    <string name="SHARED_PREF_INVES_ID" translatable="false">id_investigador</string>
    <string name="SHARED_PREF_INVES_ID_ROL" translatable="false">id_rol_investigador</string>
    <string name="SHARED_PREF_INVES_NOMBRE_ROL" translatable="false">nombre_rol_investigador</string>
    <string name="SHARED_PREF_INVES_NOMBRE" translatable="false">nombre_investigador</string>
    <string name="SHARED_PREF_INVES_APELLIDO" translatable="false">apellido_investigador</string>
    <string name="SHARED_PREF_INVES_EMAIL" translatable="false">email_investigador</string>
    <string name="SHARED_PREF_INVES_ACTIVADO" translatable="false">activado_investigador</string>
    <string name="SHARED_PREF_INVES_CREATE_TIME" translatable="false">create_time_investigador</string>
    <string name="SHARED_PREF_INVES_PASSWORD" translatable="false">password_investigador</string>
    <string name="SHARED_PREF_TOKEN_LOGIN" translatable="false">TOKEN_LOGIN</string>
    <string name="SHARED_PREF_RESET_PASS" translatable="false">reset_password</string>
    <string name="SHARED_PREF_FIRST_LOAD" translatable="false">isFirstLoad</string>
    <string name="FORMATO_FECHA" translatable="false">yyyy-MM-dd</string>
    <string name="FORMATO_FECHA_HORA">yyyy-dd-MM HH:mm:ss</string>
    <string name="FORMATO_HORA" translatable="false">HH:mm</string>
    <string name="FORMATO_ENTREVISTA_N">Interview %d</string>
    <plurals name="FORMATO_N_ENTREVISTA">
        <item quantity="one">%d interview</item>
        <item quantity="other">%d interviews</item>
    </plurals>
    <string name="FORMATO_ENTREVISTA_FECHA">Interview day %s</string>
    <string name="FORMATO_EVENTO_N">Event %d</string>
    <plurals name="FORMATO_FECHA_NAC">
        <item quantity="one">%1$s - %2$d year</item>
        <item quantity="other">%1$s - %2$d years</item>
    </plurals>
    <string name="FORMATO_ACCION">Action %d</string>
    <string name="FORMATO_LINK_DIRECTO">Direct link: %1$s</string>
    <string name="FORMATO_FECHA_REGISTRO">Register date: %1$s</string>
    <string name="KEY_INVES_OBJECT" translatable="false">investigador</string>
    <string name="KEY_INVES_ID" translatable="false">id</string>
    <string name="KEY_INVES_ID_LARGO" translatable="false">id_investigador</string>
    <string name="KEY_INVES_NOMBRE" translatable="false">nombre</string>
    <string name="KEY_INVES_APELLIDO" translatable="false">apellido</string>
    <string name="KEY_INVES_EMAIL" translatable="false">email</string>
    <string name="KEY_INVES_ID_ROL" translatable="false">id_rol</string>
    <string name="KEY_INVES_PASSWORD" translatable="false">password</string>
    <string name="KEY_INVES_NOMBRE_ROL" translatable="false">nombre_rol</string>
    <string name="KEY_INVES_ACTIVADO" translatable="false">activado</string>
    <string name="KEY_INVES" translatable="false">investigadores</string>
    <string name="KEY_INVES_N_INVESTIGADORES" translatable="false">n_investigadores</string>
    <string name="KEY_ROL_OBJECT" translatable="false">rol</string>
    <string name="KEY_ROL_ID" translatable="false">id</string>
    <string name="KEY_ROL_NOMBRE" translatable="false">nombre</string>
    <string name="KEY_ENTREVISTADO_ID_ESTADO_CIVIL" translatable="false">id_estado_civil</string>
    <string name="KEY_ENTREVISTADO_ID_NIVEL_EDUCACIONAL" translatable="false">id_nivel_educacional</string>
    <string name="KEY_ENTREVISTADO_ID_TIPO_CONVIVENCIA" translatable="false">id_tipo_convivencia</string>
    <string name="KEY_ENTREVISTADO_NOMBRE_PROFESION" translatable="false">nombre_profesion</string>
    <string name="KEY_ENTREVISTADO_ID" translatable="false">id</string>
    <string name="KEY_ENTREVISTADO_ID_LARGO" translatable="false">id_entrevistado</string>
    <string name="KEY_ENTREVISTADO_NOMBRE" translatable="false">nombre</string>
    <string name="KEY_ENTREVISTADO_NOMBRE_LARGO" translatable="false">nombre_entrevistado</string>
    <string name="KEY_ENTREVISTADO_APELLIDO" translatable="false">apellido</string>
    <string name="KEY_ENTREVISTADO_APELLIDO_LARGO" translatable="false">apellido_entrevistado</string>
    <string name="KEY_ENTREVISTADO_SEXO" translatable="false">sexo</string>
    <string name="KEY_ENTREVISTADO_SEXO_LARGO" translatable="false">sexo_entrevistado</string>
    <string name="KEY_ENTREVISTADO_ANNOS" translatable="false">annos_entrevistado</string>
    <string name="KEY_ENTREVISTADO_JUBILADO_LEGAL" translatable="false">jubilado_legal</string>
    <string name="MENU_CERRAR_SESION">Log out</string>
    <string name="MENU_GENERAL">General</string>
    <string name="MENU_MI_PERFIL">My profile</string>
    <string name="MENU_LISTA_ENTREVISTADOS">Interviewees</string>
    <string name="MENU_ESTADISTICAS">Statistics</string>
    <string name="MENU_CONFIGURACION">Configuration</string>
    <string name="ICONO_HELP">Help icon</string>
    <string name="ICONO_NOMBRE_ENTREVISTADO">Interviewee name icon</string>
    <string name="ICONO_FECHA_NAC_ENTREVISTADO">Interviewee birthdate icon</string>
    <string name="ICONO_USUARIO">User photo</string>
    <string name="NOMBRE_PERSONA">Person name</string>
    <string name="ICONO_N_ENTREVISTAS">Interviews number icon</string>
    <string name="ICONO_FECHA_REGISTRO">Registry date icon</string>
    <string name="ICONO_MENU_CONTEXTUAL">Contextual menu icon</string>
    <string name="DISTRIBUCION_EVENTOS">Event distribution</string>
    <string name="IR_VISUALIZACION">Go</string>
    <string name="ICONO_ITEM_ESTADISTICAS">Stats item icon</string>
    <string name="quick_tip">Quick tip</string>
    <string name="dot" translatable="false">•</string>
    <string name="tipos_entrevistas">Interviews types</string>
    <string name="normal_interviews">Normal: These are interviews that contain daily events that occur on an ordinary day.</string>
    <string name="extraordinary_interviews">Extraordinary: They are interviews that contain daily events that occur sporadically.</string>
</resources>