<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_ayuda"
        android:checkableBehavior="none"
        android:orderInCategory="3">

        <item
            android:id="@+id/menu_configuracion"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/MENU_CONFIGURACION" />

        <item
            android:id="@+id/menu_condiciones"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="Condiciones y privacidad" />
        <item
            android:id="@+id/menu_contacto"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="Contáctenos" />
    </group>

    <group
        android:id="@+id/group_otros"
        android:checkableBehavior="none"
        android:orderInCategory="4">

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/MENU_CERRAR_SESION" />

    </group>

    <item
        android:id="@+id/group_admin"
        android:orderInCategory="2"
        android:title="Administración">
        <menu>
            <group>

                <item
                    android:id="@+id/menu_acciones"
                    android:checkable="true"
                    android:icon="@drawable/ic_directions_run_black_24dp"
                    android:title="Acciones" />

                <item
                    android:id="@+id/menu_emoticones"
                    android:checkable="true"
                    android:icon="@drawable/ic_tag_faces_black_24dp"
                    android:title="Emoticones" />

            </group>
        </menu>

    </item>

    <item
        android:id="@+id/group_general"
        android:orderInCategory="1"
        android:title="@string/MENU_GENERAL">
        <menu>
            <group>

                <item
                    android:id="@+id/menu_perfil"
                    android:checkable="true"
                    android:icon="@drawable/ic_person_white_24dp"
                    android:title="@string/MENU_MI_PERFIL" />

                <item
                    android:id="@+id/menu_entrevistados"
                    android:checkable="true"
                    android:icon="@drawable/ic_list_black_24dp"
                    android:title="@string/MENU_LISTA_ENTREVISTADOS" />

                <item
                    android:id="@+id/menu_estadisticas"
                    android:checkable="true"
                    android:icon="@drawable/ic_show_chart_black_24dp"
                    android:title="@string/MENU_ESTADISTICAS" />

            </group>
        </menu>
    </item>
</menu>