<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_quick_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/quick_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/ICONO_HELP"
        app:layout_constraintBottom_toBottomOf="@+id/tv_quick_tip"
        app:layout_constraintStart_toEndOf="@+id/tv_quick_tip"
        app:layout_constraintTop_toTopOf="@+id/tv_quick_tip"
        app:srcCompat="@drawable/ic_baseline_help_24" />

    <TextView
        android:id="@+id/tv_dot"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="@+id/tv_item_1"
        app:layout_constraintStart_toStartOf="@+id/tv_quick_tip"
        app:layout_constraintTop_toTopOf="@+id/tv_item_1" />

    <TextView
        android:id="@+id/tv_item_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:singleLine="false"
        android:text="@string/normal_interviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dot"
        app:layout_constraintTop_toBottomOf="@+id/tv_types_interview" />

    <TextView
        android:id="@+id/tv_dot_2"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="@+id/tv_item_2"
        app:layout_constraintStart_toStartOf="@+id/tv_quick_tip"
        app:layout_constraintTop_toTopOf="@+id/tv_item_2" />

    <TextView
        android:id="@+id/tv_item_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:singleLine="false"
        android:text="@string/extraordinary_interviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dot_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_1" />

    <TextView
        android:id="@+id/tv_types_interview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tipos_entrevistas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_help" />


</androidx.constraintlayout.widget.ConstraintLayout>