<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_interviewee"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="0dp"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:theme="@style/AppTheme"
    tools:targetApi="m">

    <ImageView
        android:id="@+id/cv_iv_interviewee_person"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/ICONO_USUARIO"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:srcCompat="@drawable/person_circle" />

    <TextView
        android:id="@+id/cv_tv_interviewee_complete_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/NOMBRE_PERSONA"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorOnPrimary"
        card_view:layout_constraintBottom_toBottomOf="@+id/cv_iv_interviewee_icon_name"
        card_view:layout_constraintEnd_toStartOf="@+id/iv_menu_interviewee"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toEndOf="@+id/cv_iv_interviewee_icon_name"
        card_view:layout_constraintTop_toTopOf="@+id/cv_iv_interviewee_icon_name" />

    <TextView
        android:id="@+id/cv_tv_interviewee_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorOnSecondary"
        card_view:layout_constraintBottom_toBottomOf="@+id/cv_iv_interviewee_icon_birth_date"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toEndOf="@+id/cv_iv_interviewee_icon_birth_date"
        card_view:layout_constraintTop_toTopOf="@+id/cv_iv_interviewee_icon_birth_date"
        tools:text="XXXX/XX/XX - XX años" />

    <ImageView
        android:id="@+id/cv_iv_interviewee_icon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/ICONO_NOMBRE_ENTREVISTADO"
        card_view:layout_constraintStart_toEndOf="@+id/cv_iv_interviewee_person"
        card_view:layout_constraintTop_toTopOf="@+id/cv_iv_interviewee_person"
        card_view:srcCompat="@drawable/ic_person_black_alpha_24dp" />

    <ImageView
        android:id="@+id/cv_iv_interviewee_icon_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/ICONO_FECHA_NAC_ENTREVISTADO"
        card_view:layout_constraintBottom_toTopOf="@+id/cv_iv_icon_interviews"
        card_view:layout_constraintStart_toEndOf="@+id/cv_iv_interviewee_person"
        card_view:layout_constraintTop_toBottomOf="@+id/cv_iv_interviewee_icon_name"
        card_view:srcCompat="@drawable/ic_cake_black_alpha_24dp" />

    <ImageView
        android:id="@+id/cv_iv_icon_interviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/ICONO_N_ENTREVISTAS"
        card_view:layout_constraintBottom_toBottomOf="@+id/cv_iv_interviewee_person"
        card_view:layout_constraintStart_toEndOf="@+id/cv_iv_interviewee_person"
        card_view:srcCompat="@drawable/ic_interview_black_alpha_24dp" />

    <TextView
        android:id="@+id/tv_n_interviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorOnPrimary"
        card_view:layout_constraintBottom_toBottomOf="@+id/cv_iv_icon_interviews"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toEndOf="@+id/cv_iv_icon_interviews"
        card_view:layout_constraintTop_toTopOf="@+id/cv_iv_icon_interviews"
        tools:text="X interviews" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="?attr/dividerHorizontal"
        android:visibility="visible"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="@+id/cv_iv_icon_interviews"
        card_view:layout_constraintTop_toBottomOf="@+id/cv_iv_interviewee_person" />

    <ImageView
        android:id="@+id/iv_menu_interviewee"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/ICONO_MENU_CONTEXTUAL"
        card_view:layout_constraintBottom_toBottomOf="@+id/cv_tv_interviewee_complete_name"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.0"
        card_view:srcCompat="@drawable/ic_more_vert_black_24dp" />

    <TextView
        android:id="@+id/tv_reasearcher_in_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        android:visibility="gone"
        card_view:layout_constraintBottom_toTopOf="@+id/separator"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_n_interviews"
        tools:text="Investigador a cargo: Felipe Gonzalez"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>