<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_stat"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/tv_stat_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@+id/btn_go"
        app:layout_constraintStart_toEndOf="@+id/iv_estadistica"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/DISTRIBUCION_EVENTOS" />

    <ImageView
        android:id="@+id/iv_estadistica"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/ICONO_ITEM_ESTADISTICAS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_insert_chart_black_24dp"
        app:tint="@color/colorSecondaryVariant" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="?attr/dividerHorizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_short_link"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_short_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_go"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_stat_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_stat_name"
        tools:text="LINK CORTO" />

    <TextView
        android:id="@+id/tv_pin_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_short_link"
        app:layout_constraintStart_toStartOf="@+id/tv_short_link"
        app:layout_constraintTop_toBottomOf="@+id/tv_short_link"
        app:layout_constraintVertical_bias="0.0"
        tools:text="PIN PASS" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/IR_VISUALIZACION"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>