<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_investigador"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:theme="@style/AppTheme">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/cv_tv_nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/NOMBRE_PERSONA"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorOnPrimary"
            card_view:layout_constraintBottom_toBottomOf="@+id/cv_iv_icono_nombre"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/cv_iv_icono_nombre"
            card_view:layout_constraintTop_toTopOf="@+id/cv_iv_icono_nombre" />

        <TextView
            android:id="@+id/cv_tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorOnSecondary"
            card_view:layout_constraintBottom_toBottomOf="@+id/cv_iv_icono_fecha_nac"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/cv_iv_icono_fecha_nac"
            card_view:layout_constraintTop_toTopOf="@+id/cv_iv_icono_fecha_nac"
            tools:text="email_from_investigator@email.com" />

        <ImageView
            android:id="@+id/cv_iv_icono_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/ICONO_NOMBRE_ENTREVISTADO"
            android:tint="@color/colorSecondaryVariant"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_person_black_24dp" />

        <ImageView
            android:id="@+id/cv_iv_icono_fecha_nac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ICONO_FECHA_NAC_ENTREVISTADO"
            android:tint="@color/colorSecondaryVariant"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/cv_iv_icono_nombre"
            card_view:srcCompat="@drawable/ic_email_black_24dp" />

        <ImageView
            android:id="@+id/iv_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ICONO_FECHA_REGISTRO"
            android:tint="@color/colorSecondaryVariant"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/cv_iv_icono_fecha_nac"
            card_view:srcCompat="@drawable/ic_access_time_black_24dp" />

        <TextView
            android:id="@+id/cv_tv_fecha_registro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorOnPrimary"
            card_view:layout_constraintBottom_toBottomOf="@+id/iv_registro"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/cv_iv_icono_fecha_nac"
            card_view:layout_constraintTop_toTopOf="@+id/iv_registro"
            tools:text="2019-08-12 12:54:00 " />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/cv_switch_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:switchPadding="10dp"
            android:textColor="@color/colorOnPrimary"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/cv_tv_fecha_registro" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
